--- a/students/templates/result.html
+++ b/students/templates/result.html
@@ -1,20 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Prediction Result</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
+<h2 style="color: {{ color }};">
+    {{ result }}
+</h2>
 
-<div class="container mt-5 text-center">
-    <div class="card shadow p-4">
-        <h2 class="text-success">Prediction Result</h2>
-        <h3 class="mt-3">{{ result }}</h3>
+<img src="data:image/png;base64,{{ graph }}" width="500">
 
-        <a href="/" class="btn btn-primary mt-4">Go Back</a>
-        <a href="/history/" class="btn btn-secondary mt-4">View History</a>
-    </div>
-</div>
-
-</body>
-</html>
+<br><br>
+<a href="/">Go Back</a>
